--- a/config/locales/sign_up/en.yml
+++ b/config/locales/sign_up/en.yml
@@ -8,9 +8,13 @@ en:
       modal_header: Are you sure you want to cancel?
       success: Your account has been deleted. We did not save your information.
       warning_header: If you cancel now
+      warning_point_primary_prefix: You may not be able to access your information at
+      warning_point_primary_suffix: online.
       warning_points:
       - You won’t have a login.gov account
       - We won't keep a record of your email address, password, and phone number
       - You won't be able to securely access your information using login.gov
     registrations:
       create_account: Create an account
+    sp_name:
+      default: Service Provider Name
