--- a/config/locales/sign_up/fr.yml
+++ b/config/locales/sign_up/fr.yml
@@ -8,11 +8,10 @@ fr:
       modal_header: Souhaitez-vous vraiment annuler?
       success: Le dossier contenant votre information a été effacé
       warning_header: Si vous annulez maintenant
+      warning_disclaimer: NOT TRANSLATED YET
+      warning_point: NOT TRANSLATED YET
       warning_points:
       - Vous n'aurez pas de compte login.gov
-      - Nous ne conserverons pas de dossier contenant votre adresse courriel, votre
-        mot de passe et votre numéro de téléphone
-      - Vous ne serez pas en mesure d'accéder à votre information de façon sécuritaire
-        en utilisant login.gov
+      - NOT TRANSLATED YET
     registrations:
       create_account: Créer un compte
