--- a/config/locales/idv/fr.yml
+++ b/config/locales/idv/fr.yml
@@ -19,6 +19,7 @@ fr:
       warning_header: Si vous annulez maintenant
       warning_disclaimer: NOT TRANSLATED YET
       warning_point: NOT TRANSLATED YET
+      warning_point_no_sp: NOT TRANSLATED YET
       warning_points:
       - NOT TRANSLATED YET
       - NOT TRANSLATED YET
