--- a/config/locales/sign_up/es.yml
+++ b/config/locales/sign_up/es.yml
@@ -8,8 +8,9 @@ es:
       modal_header: "¿Está seguro de que desea cancelar?"
       success: Su cuenta ha sido eliminada. No guardamos su información.
       warning_header: Si cancela ahora
-      warning_disclaimer: NOT TRANSLATED YET
+      warning_qualifier: NOT TRANSLATED YET
       warning_point: NOT TRANSLATED YET
+      warning_point_no_sp: NOT TRANSLATED YET
       warning_points:
       - No tendrá una cuenta de login.gov
       - NOT TRANSLATED YET
