--- a/config/locales/idv/en.yml
+++ b/config/locales/idv/en.yml
@@ -17,9 +17,11 @@ en:
     cancel:
       modal_header: Are you sure you want to cancel?
       warning_header: If you cancel now
-      warning_disclaimer: may not
-      warning_point: Login.gov won't be able to verify your identity and you DISCLAIMER
-        be able to access your information at SP_NAME.
+      warning_qualifier: may not
+      warning_point: Login.gov won't be able to verify your identity and you %{warning_qualifier}
+        be able to access your information at %{sp_name}.
+      warning_point_no_sp: Login.gov won't be able to verify your identity and you %{warning_qualifier}
+        be able to access your information.
       warning_points:
       - Login.gov won't keep a record of your name, address, birth date, or Social
         Security number.
