--- a/config/locales/idv/es.yml
+++ b/config/locales/idv/es.yml
@@ -4,6 +4,7 @@ es:
     buttons:
       activate_by_mail: Acitive por email
       activate_by_phone: Active por teléfono
+      back: NOT TRANSLATED YET
       cancel: Cancele y regrese a su perfil
       continue: Continúe la verificación de identidad
       help: Continúe con el Centro de Ayuda
