--- a/config/locales/idv/fr.yml
+++ b/config/locales/idv/fr.yml
@@ -4,6 +4,7 @@ fr:
     buttons:
       activate_by_mail: Activer par la poste
       activate_by_phone: Activer par téléphone
+      back: NOT TRANSLATED YET
       cancel: Annuler et retourner à votre profil
       continue: Continuer la vérification d'identité
       help: Continuer jusqu'au Centre d'aide
