--- a/config/locales/idv/es.yml
+++ b/config/locales/idv/es.yml
@@ -100,6 +100,7 @@ es:
       activated_html: Su identidad ha sido verificada. Si necesita cambiar la información
         verificada, por favor, %{link}.
       activated_link: Contáctenos
+      back: NOT TRANSLATED YET
       cancel: Para continuar %{app} necesita verificar su identidad. Necesitamos recopilar
         información personal básica, así como su información financiera para completar
         este proceso. Si no tiene la información que necesitamos en este momento,
