--- a/config/locales/idv/en.yml
+++ b/config/locales/idv/en.yml
@@ -27,7 +27,7 @@ en:
       - Login.gov won't keep a record of your name, address, birth date, or Social
         Security number.
       - You’ll still have a login.gov account for your email address. You can manage
-        that account on your profile page
+        that account on your profile page.
     errors:
       bad_dob: Your date of birth must be a valid date.
       duplicate_ssn: An account already exists with the information you provided.
