--- a/config/locales/idv/es.yml
+++ b/config/locales/idv/es.yml
@@ -17,12 +17,16 @@ es:
     cancel:
       modal_header: "¿Está seguro que desea cancelar?"
       warning_header: Si usted cancela ahora
-      warning_disclaimer: no pueda
-      warning_point: Login.gov no podrá verificar su identidad y es posible que %{warning_qualifier} acceder a su información en %{sp_name}.
-      warning_point_no_sp: Login.gov no podrá verificar su identidad y es posible que %{warning_qualifier} acceder a su información.
+      warning_qualifier: no pueda
+      warning_point: Login.gov no podrá verificar su identidad y es posible que %{warning_qualifier}
+        acceder a su información en %{sp_name}.
+      warning_point_no_sp: Login.gov no podrá verificar su identidad y es posible
+        que %{warning_qualifier} acceder a su información.
       warning_points:
-      - Login.gov no mantendrá un registro de su nombre, dirección, fecha de nacimiento, o número de Seguro Social.
-      - Aún tendrá una cuenta de login.gov para su dirección de correo electrónico. Puede administrar esa cuenta en su página de perfil.
+      - Login.gov no mantendrá un registro de su nombre, dirección, fecha de nacimiento,
+        o número de Seguro Social.
+      - Aún tendrá una cuenta de login.gov para su dirección de correo electrónico.
+        Puede administrar esa cuenta en su página de perfil.
     errors:
       bad_dob: Su fecha de nacimiento debe ser una fecha válida.
       duplicate_ssn: Ya existe una cuenta con la información que proporcionó.
