--- a/config/locales/sign_up/es.yml
+++ b/config/locales/sign_up/es.yml
@@ -9,10 +9,12 @@ es:
       success: Su cuenta ha sido eliminada. No guardamos su información.
       warning_header: Si cancela ahora
       warning_qualifier: Es posible que no pueda
-      warning_point: "%{warning_qualifier} acceder a su información en %{sp_name} en línea."
+      warning_point: "%{warning_qualifier} acceder a su información en %{sp_name}
+        en línea."
       warning_point_no_sp: "%{warning_qualifier} acceder a su información en línea."
       warning_points:
       - No tendrá una cuenta de login.gov.
-      - Login.gov no almacenará su dirección de correo electrónico, contraseña y número de teléfono.
+      - Login.gov no almacenará su dirección de correo electrónico, contraseña y número
+        de teléfono.
     registrations:
       create_account: Crear una cuenta
