--- a/config/locales/links/es.yml
+++ b/config/locales/links/es.yml
@@ -7,8 +7,8 @@ es:
         without_key: No tengo mi clave
     back_to_sp: Volver a %{sp}
     cancel: Cancelar
-    cancel_account_creation: "< Cancelar la creación de cuenta"
-    cancel_idv: "< Cancelar la verificación de cuenta"
+    cancel_account_creation: "‹ Cancelar la creación de cuenta"
+    cancel_idv: "‹ Cancelar la verificación de identidad"
     contact: Contactar
     copy: Copiar
     create_account: Crear cuenta
