--- a/config/locales/links/fr.yml
+++ b/config/locales/links/fr.yml
@@ -8,7 +8,7 @@ fr:
     back_to_sp: Retour à %{sp}
     cancel: Annuler
     cancel_account_creation: "‹ Annuler la création du compte"
-    cancel_idv: "‹ Annuler la vérification du compte"
+    cancel_idv: "‹ Annuler la vérification de l’identité"
     contact: Contact
     copy: Copier
     create_account: Créer un compte
